--- a/src/views/MarkedEntities.css
+++ b/src/views/MarkedEntities.css
@@ -1,3 +1,7 @@
+mark {
+  background-color: yellow;
+}
+
 .main {
   display: flex;
   min-height: 10vh;
@@ -12,18 +16,24 @@
 }
 
 .main__text {
-  background-color: gold;
+  background-color: lightcyan;
   width: 60%;
   padding: 0.8em;
 }
 
+.main__text::selection {
+  background-color: yellow;
+}
+
 .main__checkboxes {
-  background-color: lightcyan;
+  background-color: gold;
   width: 40%;
   margin-left: 2em;
+  padding: 0.8em;
 }
 
 .result {
   background-color: lavender;
   min-height: 20vh;
+  padding: 0.8em;
 }
