--- a/src/views/MarkedEntities.css
+++ b/src/views/MarkedEntities.css
@@ -5,19 +5,19 @@ mark {
 .main {
   display: flex;
   min-height: 10vh;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 .main__wrapper {
-  max-width: 900px;
-  margin: 5em auto;
+  max-width: 1024px;
+  margin: 2em auto;
   background-color: pink;
   /*min-height: 10vh;*/
 }
 
 .main__text {
   background-color: lightcyan;
-  width: 60%;
+  width: 70%;
   padding: 0.8em;
 }
 
@@ -27,7 +27,7 @@ mark {
 
 .main__checkboxes {
   background-color: gold;
-  width: 40%;
+  width: 30%;
   margin-left: 2em;
   padding: 0.8em;
 }
@@ -36,4 +36,29 @@ mark {
   background-color: lavender;
   min-height: 20vh;
   padding: 0.8em;
+}
+
+.btn {
+  background-color: darkslateblue;
+  padding: 0.5em 1em;
+  border-radius: 5px;
+  color: white;
+  margin: 0 auto 1em;
+  display: block;
+}
+
+.checkboxes-list {
+  list-style: none;
+}
+
+.checkboxes-list__item {
+  visibility: visible;
+}
+
+.checkboxes-list__item:not(last-child) {
+  margin-bottom: 0.5em;
+}
+
+.checkboxes-list__label {
+  visibility: visible;
 }
