--- a/src/assets/stylesheets/App.css
+++ b/src/assets/stylesheets/App.css
@@ -4,3 +4,20 @@
 body {
   font: 18px/1.3 'Avenir', Helvetica, Arial, sans-serif;
 }
+
+mark {
+  background-color: yellow;
+}
+
+.main {
+  display: flex;
+  min-height: 10vh;
+  margin-bottom: 1em;
+}
+
+.main__wrapper {
+  max-width: 1024px;
+  margin: 2em auto;
+  background-color: pink;
+  /*min-height: 10vh;*/
+}
