--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,12 +43,17 @@ mark {
 }
 
 .btn {
-  background-color: darkslateblue;
+  /*background-color: darkslateblue;*/
   padding: 0.5em 1em;
   border-radius: 5px;
-  color: white;
+  /*color: white;*/
   margin: 0 auto 1em;
   display: block;
+  font-size: 1em;
+}
+
+.btn--inline {
+  display: inline-block;
 }
 
 .checkboxes-list {
