сделала через hiliteColor

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,15 +3,15 @@ body {
 }
 
 .mark-red {
-  background-color: salmon; /*rgba #fa8072808*/
+  background-color: salmon; /*rgba(250, 128, 114, 0.5); #fa8072808*/
 }
 
 .mark-green {
-  background-color: yellowgreen; /*rgba #9acd3280*/
+  background-color: yellowgreen; /*rgba(154, 205, 50, 0.5) #9acd3280*/
 }
 
 .mark-yellow {
-  background-color: gold; /*rgba #ffd70080*/
+  background-color: gold; /*rgba(255, 215, 0, 0.5) #ffd70080*/
 }
 
 .main {
