--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ body {
   font: 18px/1.3 'Avenir', Helvetica, Arial, sans-serif;
 }
 
+mark,
 .mark-red {
   background-color: salmon; /*rgba(250, 128, 114, 0.5); #fa8072808*/
 }
