--- a/src/assets/stylesheets/App.css
+++ b/src/assets/stylesheets/App.css
@@ -5,8 +5,17 @@ body {
   font: 18px/1.3 'Avenir', Helvetica, Arial, sans-serif;
 }
 
-mark {
-  background-color: yellow;
+mark,
+.mark-red {
+  background-color: rgba(250, 128, 114, 0.5); /*salmon */
+}
+
+.mark-green {
+  background-color: rgba(154, 205, 50, 0.5); /*yellowgreen */
+}
+
+.mark-yellow {
+  background-color: rgba(255, 215, 0, 0.5); /*gold */
 }
 
 .main {
