--- a/src/assets/stylesheets/App.css
+++ b/src/assets/stylesheets/App.css
@@ -9,7 +9,7 @@ mark {
   background-color: transparent;
   border-style: solid;
   border-width: 2px;
-  opacity: .5;
+  color: gray;
 }
 
 /*TODO цвета генерировать рандомно, потому что неизвестно сколько будет тегов*/
